# accreditation-api

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_entry.sql  entrypoint.sh  pyproject.toml
api/: app.py  server.py
api/decorators/: require_login.py
api/endpoints/: __init__.py
api/mayim/: auth_executor.py  create_executor.py  delete_executor.py  naac_executor.py  nba_executor.py  nirf_executor.py  table_executor.py  user_executor.py
api/models/: enums.py  generic_model.py  (+1 more)
data-entry/: 001.sql  002.sql  003.sql  004.sql  005.sql  data_entry.sql
forms/: adjunct-faculty.json  after-graduation-entrepreneurship.json  after-graduation-higher-studies.json  after-graduation-placements.json  after-graduation.json  agencies.json  awards.json  benefit-programs.json  branch-intakes.json  branches.json  collaborative-activities.json  companies.json  competitive-events.json  continuing-education-programs.json  departments.json  e-resources.json  events.json  facilities.json  faculty-courses.json  faculty-internship-training-collaboration.json  faculty-sponsored-research-projects-consultancy-work-institute-seed-money.json  faculty-student-innovative-projects.json  faculty.json  form1.json  forms.schema.json  gpa.json  informational-events.json  institutes.json  ipr-earnings.json  ipr.json  journal-publications.json  journals.json  laboratories-technical-manpower.json  laboratories.json  national-government-exams.json  organizers.json  professional-communities.json  program-intakes.json  programs.json  schema.json  (+3 more)
(+401 files in other folders)
